@@ -1,3 +1,7 @@
+2008-12-07 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Port hyphenator to C++.
+
 2008-12-05 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Add option -s to voikkohyphenate.
